# NexusWare

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
desktop_app/: README.md  requirements.txt
diagrams/: plantuml_component_diagram.txt  plantuml_dataflow_diagram.txt  plantuml_db_scheme.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  openapi.json
mobile_app/: README.md  pyproject.toml
mobile_app/src/nexusware/: __main__.py  app.py
mobile_app/src/nexusware/screens/: base.py
mobile_app/src/nexusware/screens/auth/: __init__.py  login.py  profile.py
mobile_app/src/nexusware/screens/inventory/: __init__.py  barcode_scanner.py  inventory_list.py  product_details.py  stock_count.py
mobile_app/src/nexusware/screens/picking/: __init__.py  pick_list.py  picking.py
mobile_app/src/nexusware/screens/tasks/: __init__.py  task_details.py  task_list.py
mobile_app/src/nexusware/utils/: __init__.py  cache_manager.py  navigation_manager.py  network_manager.py  theme_manager.py
public_api/: README.md  permission_manager.py  pyproject.toml
public_api/api/: __init__.py  assets.py  audit.py  carriers.py  categories.py  client.py  customers.py  inventory.py  locations.py  notifications.py  orders.py  permissions.py  pick_lists.py  po_items.py  product_categories.py  products.py  purchase_orders.py  quality.py  reports.py  roles.py  search.py  shipments.py  suppliers.py  tasks.py  users.py  warehouse.py
public_api/permissions/: __init__.py  permission_enums.py  permission_manager.py
public_api/shared_schemas/: __init__.py  asset.py  audit.py  chat.py  inventory.py  notification.py  order.py  quality.py  reports.py  task.py  user.py  warehouse.py  yard.py
(+296 files in other folders)
