[tool.poetry]
name = "nexusware-mobile"
version = "0.1.0"
description = "NexusWare Mobile Application"
authors = ["Max Azatian"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
toga = "^0.3.0"
toga-cocoa = "^0.3.0"
pydantic = "^2.0.0"
aiohttp = "^3.8.0"
email-validator = "^2.0.0"
nexusware-public-api = { path = "../public_api" }

[tool.poetry.group.dev.dependencies]
briefcase = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "NexusWare Mobile"
bundle = "com.example.nexusware"
version = "0.1.0"
license.file = "LICENSE"
author = "Max Azatian"

[tool.briefcase.app.nexusware]
formal_name = "NexusWare Mobile"
description = "NexusWare Mobile Application"
sources = ['src/nexusware', '../public_api']
requires = [
    'toga>=0.3.0',
    'pydantic>=2.0.0',
    'aiohttp>=3.8.0',
]
paths = [
    "../public_api"
]

[tool.briefcase.app.nexusware.macOS]
requires = [
    'toga-cocoa>=0.3.0',
]

[tool.briefcase.app.nexusware.ios]
requires = [
    'toga-iOS>=0.3.0',
]